NN-5081 jvm args for the Test cases